--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3'
-
 services:
   postgres:
     image: postgres
     container_name: postgres-container
     environment:
+      POSTGRES_USER: test_user
       POSTGRES_PASSWORD: mysecretpassword
     ports:
       - "5432:5432"
+    restart: always
+  
+  bot:
+    container_name: telegramm_bot
+    build: 
+      context: . 
+      dockerfile: Dockerfile.telegram_bot
+    depends_on:
+      - postgres
+    command: python -u telegramm_bot.py
+    restart: always
